# starting-ragchatbot-codebase

./: CLAUDE.md  pyproject.toml
.claude/commands/: implement-feature.md
backend/: app.py  document_processor.py  test_course_search_tool.py  vector_store.py
frontend/: index.html  script.js  style.css
scripts/: lint.sh
